# pick

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-merge-dependabot.yml  auto-release.yml  ci.yml  release.yml
choco/: pick.nuspec
choco/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
examples/: .env  config.toml  config.yaml  data.json  screenshot-commands.sh  users.csv
npm/pick-cli/: README.md  package.json
npm/pick-cli-darwin-arm64/: package.json
npm/pick-cli-darwin-x64/: package.json
npm/pick-cli-linux-arm64/: package.json
npm/pick-cli-linux-x64/: package.json
npm/pick-cli-win32-x64/: package.json
scripts/: build-npm.sh
site/: index.html
snap/: snapcraft.yaml
src/: cli.rs  detector.rs  error.rs  lib.rs  main.rs  output.rs  selector.rs  streaming.rs
src/formats/: csv_format.rs  env.rs  headers.rs  json.rs  logfmt.rs  mod.rs  text.rs  toml_format.rs  yaml.rs
src/selector/: extract.rs  filter.rs  manipulate.rs  mod.rs  parser.rs  types.rs
tests/: integration.rs
