[package]
name = "pick-cli"
version = "0.1.2"
edition = "2024"
description = "Extract values from anything — JSON, YAML, TOML, .env, HTTP headers, logfmt, CSV, and more"
license = "MIT"
repository = "https://github.com/aryanbhosale/pick"
homepage = "https://pick-cli.pages.dev"
readme = "README.md"
keywords = ["cli", "json", "yaml", "extract", "parser"]
categories = ["command-line-utilities", "parsing"]
exclude = [
    "npm/",
    "snap/",
    "choco/",
    "dist/",
    ".github/",
    "tests/",
    "website/",
    "MARKETING.md",
]

[lib]
name = "pick"
path = "src/lib.rs"

[[bin]]
name = "pick"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
csv = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
